--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -39,7 +39,8 @@
             app:floatingSearch_showSearchKey="false"
             app:floatingSearch_dismissOnOutsideTouch="true"
             app:floatingSearch_leftActionMode="showHamburger"
-            app:floatingSearch_menu="@menu/menu_main"/>
+            app:floatingSearch_menu="@menu/menu_main"
+            app:floatingSearch_setQueryAsTitle="true"/>
 
     </RelativeLayout>
 
